# jni_rust

./: .gitignore
csharp/: LibGrouper.cs  Pc.cs  Program.cs  csharp.csproj  csharp.sln
dotnet/cs_rust_ffi/: Program.cs  cs_rust_ffi.sln
java/: build.gradle
java/src/main/java/: LibGrouper.java  Main.java  Pc.java
libgrouper/: Cargo.toml  build.rs
libgrouper/src/: lib.rs
libgrouper/src/protos/: mod.rs  pc.rs
native/grouper/protos/: pc.proto
native/grouper/src/: lib.rs
native/grouper/src/protos/: mod.rs  pc.rs
protos/: pc.proto
res/: pc.proto
src/: LibGrouper.java  Main.java  Pc.java
