[package]
name = "grouper"
version = "0.1.0"
authors = ["Urs Gerber <ug.gerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
lazy_static = "1.4.0"
protobuf = "2.23.0"

[lib]
crate-type=["cdylib"]

[build-dependencies]
protoc-rust = "2.23.0"
